<resources>
    <!-- TODO: Add Indonesian Language-->
    <string name="app_name">RouteRecordApp</string>

    <string name="fab_my_location">My location</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="data_route">Data Routes</string>

    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="background_location">Background location</string>
    <string name="post_notification">Notification</string>

    <string name="dialog_title">%1$s required</string>
    <string name="dialog_message">This app needs access to your %1$s</string>
    <string name="dialog_message_permission_permanently_decline">It seems you permanently declined %1$s permission. You can go to the app settings to grant it.</string>
    <string name="dialog_message_background_location_permission_permanently_decline">This app requires location access at all times to work properly. You can go to the app settings to change it.</string>
    <string name="dialog_positive_button_default">Confirm</string>
    <string name="dialog_positive_button_grant_permission">Grant permission</string>

    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_finish">Finish</string>

    <string name="desc_route_image">Route Image</string>
    <string name="delete">Delete</string>
    <string name="refresh_image">Refresh Image</string>

    <string name="sort_latest">Latest</string>
    <string name="sort_earliest">Earliest</string>
    <string name="sort_longest">Longest</string>
    <string name="sort_shortest">Shortest</string>
    <string name="sort_longest_time">Longest Time</string>
    <string name="sort_shortest_time">Shortest Time</string>

    <string name="all_time">All Time</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>

    <string name="format_date_time">%1$s (%2$s)</string>
    <string name="format_time_hour">%1$dh %2$dm</string>
    <string name="format_time_minute">%1$dm %2$ds</string>
    <string name="format_time_second">%1$ds</string>
    <string name="data_not_found">Data not found</string>

    <string name="average">Average</string>
    <string name="total">Total</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="text_null">-</string>
    <string name="tracking_route_title">Recording your activities</string>
    <!-- for last km -->
    <string name="avg_pace">Avg Pace</string>
    <string name="all_activity">All Activity</string>
</resources>